--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,12 @@
+:root {
+	--theme-color: #000000;
+	--accent-color: #ffffff;
+	--secondary-color: #888888;
+	--button-background-color: #0A0A0A;
+	--footer-background-color: #292929;
+	--border-color: #333333;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color: white;
