--- a/src/styles/card.module.css
+++ b/src/styles/card.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 29%; 
-    border: 2px solid #333333;
+    border: 2px solid var(--border-color);
     padding: 1.5%;
     border-radius: 12px;
     margin-bottom: 1.5%;
@@ -23,7 +23,7 @@
 }
 
 .card__subTitle {
-    color: #888888;
+    color: var(--secondary-color);
 }
 
 .card__title_withOutImage {
