--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,6 @@
-:root {
+:root[data-theme="dark"] {
 	--theme-color: #000000;
+	--text-color: #ffffff;
 	--accent-color: #ffffff;
 	--secondary-color: #888888;
 	--button-background-color: #0A0A0A;
@@ -7,11 +8,19 @@
 	--border-color: #333333;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color: white;
-    color-scheme: dark;
-  }
+:root[data-theme="light"] {
+	--theme-color: #ffffff;
+	--text-color: #000000;
+	--accent-color: #000000;
+	--secondary-color: #888888;
+	--button-background-color: #f0f0f0;
+	--footer-background-color: #dddddd;
+	--border-color: #333333;
+}
+
+html {
+    color: var(--text-color);
+    background-color: var(--theme-color);
 }
 
 html, body, div, span, applet, object, iframe,
