Закреплена верхняя панель навигации

--- a/src/styles/mainPage.module.css
+++ b/src/styles/mainPage.module.css
@@ -10,67 +10,6 @@
     text-decoration: none;
 }
 
-.mainPage__header {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    border-bottom: 1px solid var(--secondary-color); 
-}
-
-.mainPage__nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 80%;
-    height: 64px;
-}
-
-.mainPage__nav ul {
-    display: flex;
-    justify-content: space-between;
-    width: 40%;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-
-.mainPage__nav ul a {
-   color: var(--secondary-color);
-   transition: 200ms ease color;
-}
-
-.mainPage__nav ul a:hover {
-    color: var(--accent-color);
- }
-
-.mainPage__authentication {
-    display: flex;
-    justify-content: space-between;
-    width: 20%;
-}
-
-.mainPage__secondaryBtn {
-    text-align: center;
-    border: 1px solid var(--secondary-color);
-    background: var(--button-background-color);
-    color: var(--accent-color);
-    border-radius: 6px;
-}
-
-.mainPage__accentBtn {
-    text-align: center;
-    background: var(--accent-color);
-    color: var(--theme-color);
-    border-radius: 6px;
-    border: 1px solid var(--accent-color);
-}
-
-.mainPage__authentication a {
-    width: 130px;
-    height: 35px;
-    line-height: 35px;
-}
-
 .mainPage__content {
     display: flex;
     flex-direction: column;
@@ -94,6 +33,22 @@
     align-items: center;
     width: 75%;
     z-index: 100;
+}
+
+.mainPage__secondaryBtn {
+    text-align: center;
+    border: 1px solid var(--secondary-color);
+    background: var(--button-background-color);
+    color: var(--accent-color);
+    border-radius: 6px;
+}
+
+.mainPage__accentBtn {
+    text-align: center;
+    background: var(--accent-color);
+    color: var(--theme-color);
+    border-radius: 6px;
+    border: 1px solid var(--accent-color);
 }
 
 .mainPage__title {
@@ -247,6 +202,7 @@
     flex-direction: column;
     width: 100%;
     align-items: center;
+    margin-bottom: 50px;
 }
 
 .mainPage__cardsTitle {
@@ -259,4 +215,34 @@
     justify-content: space-between;
     flex-wrap: wrap;
     width: 100%;
+}
+
+.mainPAge__example {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
+.mainPage__exampleTitle {
+    font-size: 32px;
+    margin-bottom: 40px;
+    text-align: center;
+}
+
+.mainPage__examples {
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.mainPage__exampleImg {
+    width: 32%;
+}
+
+.mainPage__exampleImg img {
+    max-width: 100%;
+    height: 500px;
+    object-fit: cover;
 }
