Начато добавление формы регистрации

--- a/src/styles/signUp.module.css
+++ b/src/styles/signUp.module.css
@@ -5,4 +5,31 @@
     width: 95vw;
     height: 90vh;
     margin: 0 auto;
+    margin-top: 65px;
+}
+
+.signUp__form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 25%;
+    height: 40vh;
+}
+
+.signUp__form input {
+    height: 50px;
+    border-radius:6px;
+    color: var(--accent-color);
+    background: var(--button-background-color);
+    border: 1px solid var(--button-background-color);
+    transition: 500ms ease all;
+    padding: 4px 10px;
+    margin: 1px;
+    width: 100%;
+}
+
+.signUp__form input:focus {
+    border: 1px solid var(--accent-color);
+    transition: 500ms ease all; 
 }
