--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -10,6 +10,15 @@
     z-index: 100000;
 }
 
+.header__logo {
+    display: flex;
+}
+
+.header__logo img {
+    width: auto;
+    height: 64px;
+}
+
 .header a {
     text-decoration: none;
 }
@@ -29,6 +38,11 @@
     list-style: none;
     padding: 0;
     margin: 0;
+}
+
+.header__nav ul li {
+    display: flex;
+    align-items: center;
 }
 
 .header__nav ul a {
