--- a/src/styles/mainPage.module.css
+++ b/src/styles/mainPage.module.css
@@ -202,7 +202,7 @@
     flex-direction: column;
     width: 100%;
     align-items: center;
-    margin-bottom: 50px;
+    margin-bottom: 100px;
 }
 
 .mainPage__cardsTitle {
@@ -234,6 +234,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 50px;
 }
 
 .mainPage__partnerTitle {
@@ -249,7 +250,21 @@
 }
 
 .mainPage__partnerImages img {
-    width: 30%;
+    width: 25%;
     height: auto;
+}
+
+.mainPage__reviews {
+    display: flex;
+    justify-content: space-between;
+    width: 75%;
+    border: 1px solid var(--border-color);
+    border-radius: 12px;
+}
+
+.mainPage__reviews_border {
+    width: 1px;
+    height: 215px;
+    background-color: var(--border-color);
 }
 
