--- a/src/styles/mainPage.module.css
+++ b/src/styles/mainPage.module.css
@@ -17,6 +17,12 @@
     width: 80%;
 }
 
+@media(max-width: 767px) {
+    .mainPage__content {
+        width: 95%;
+    }
+}
+
 .mainPage__banner {
     display: flex;
     flex-direction: column;
@@ -25,6 +31,7 @@
     width: 100%;
     height: 100vh;
     text-align: center;
+    margin-top: 65px;
 }
 
 .mainPage__bannerText {
@@ -54,6 +61,13 @@
 .mainPage__title {
     font-size: 68px;
     margin-bottom: 56px;
+}
+
+@media(max-width: 767px) {
+    .mainPage__title {
+        font-size: 50px;
+        margin-bottom: 50px;
+    }
 }
 
 .mainPage__subTitle {
@@ -217,13 +231,25 @@
     width: 100%;
 }
 
+@media(max-width: 767px) {
+    .mainPage__cardsContent {
+        justify-content: center;
+    }
+}
+
 .mainPage__cardsContent > div {
     width: 29%;
     border: 2px solid var(--border-color);
     padding: 1.5%;
     border-radius: 12px;
-    margin-bottom: 1.5%;
-    
+    margin-bottom: 1.5%; 
+}
+
+@media(max-width: 767px) {
+    .mainPage__cardsContent > div {
+        width: 90%;
+        margin-bottom: 10%;
+    }
 }
 
 .mainPage__partner {
@@ -246,9 +272,22 @@
     justify-content: space-between;
 }
 
+@media(max-width: 767px) {
+    .mainPage__partnerImages {
+        justify-content: center;
+    }
+}
+
 .mainPage__partnerImages > div {
     width: 25%;
     height: auto;
+}
+
+@media(max-width: 767px) {
+    .mainPage__partnerImages > div {
+        width: 90%;
+        margin-bottom: 10%;
+    }
 }
 
 .mainPage__partnerImages img {
@@ -264,6 +303,13 @@
     border-radius: 12px;
     margin-bottom: 75px;
     margin:  0 auto;
+}
+
+
+@media(max-width: 767px) {
+    .mainPage__reviews {
+        flex-direction: column;
+    }
 }
 
 .mainPage__reviews_border {
@@ -295,4 +341,11 @@
     margin-bottom: 25px;
     border-radius: 12px;
     padding: 24px;
+}
+
+
+@media(max-width: 767px) {
+    .mainPage__technologiesContent > div {
+        width: 90%;
+    }
 }
