--- a/src/styles/review.module.css
+++ b/src/styles/review.module.css
@@ -7,6 +7,13 @@
     height: 175px;
 }
 
+@media(max-width: 767px) {
+    .review {
+        justify-content: center;
+        width: 90%;
+    }
+}
+
 .review__text {
     line-height: 20px;
 }
