--- a/src/styles/contacts.module.css
+++ b/src/styles/contacts.module.css
@@ -12,6 +12,7 @@
     .contacts {
         justify-content: flex-start;
         margin-top: 100px;
+        height: auto;
     }
 }
 
@@ -135,13 +136,20 @@
     margin: auto 0;
 }
 
-@media(max-width: 767px) {
-    .contacts__logo {
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: center;
-    }
+.contacts__logo a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+/* @media(max-width: 767px) {
+    .contacts__logo {
+        
+    }
+    .contacts__logo a {
+        
+    }
+} */
 
 .contacts__logo svg {
     width: 75px;
@@ -150,7 +158,7 @@
 
 @media(max-width: 767px) {
     .contacts__logo svg {
-        width: 70%;
-        height: auto;
+        width: 20vw;
+        height: 30vw;
     }
 }
