--- a/src/styles/burger.module.css
+++ b/src/styles/burger.module.css
@@ -4,3 +4,31 @@
     background-color: var(--theme-color);
 }
 
+.burger__nav {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 70%;
+    padding-top: 50px;
+    font-size: 24px;
+}
+
+.burger__nav a {
+    color: var(--secondary-color);
+    transition: 400ms ease color;
+}
+
+.burger__nav a:hover {
+    color: var(--accent-color);
+}
+
+.burger__installBtn {
+    background-color: var(--accent-color);
+    color: var(--theme-color) !important;
+    width: 150px;
+    height: 50px;
+    text-align: center;
+    line-height: 50px;
+}
