Небольшие улучшения стилей

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,7 @@
 	--theme-color: #000000;
 	--text-color: #ffffff;
 	--accent-color: #ffffff;
+	--header-background-color: #0000009f;
 	--secondary-color: #888888;
 	--secondary-background-color: #0A0A0A;
 	--button-background-color: #1A1A1A;
@@ -13,6 +14,7 @@
 	--theme-color: #ffffff;
 	--text-color: #000000;
 	--accent-color: #000000;
+	--header-background-color: #eeeeee9f;
 	--secondary-color: #666666;
 	--secondary-background-color: #f0f0f0;
 	--button-background-color: #F2F2F2;
