--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -5,7 +5,7 @@
     border-bottom: 1px solid var(--secondary-color); 
     position: fixed;
     top: 0;
-    background-color: #0000009f;
+    background-color: var(--header-background-color);
     backdrop-filter: blur(10px);
     z-index: 100000;
 }
