--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,8 @@
 	--button-background-color: #1A1A1A;
 	--footer-background-color: #292929;
 	--border-color: #333333;
+	--filter-brightness-accent: 80%;
+	--filter-brightness-secondary: 130%;
 }
 
 :root[data-theme="light"] {
@@ -20,6 +22,8 @@
 	--button-background-color: #F2F2F2;
 	--footer-background-color: #dddddd;
 	--border-color: #333333;
+	--filter-brightness-accent: 130%;
+	--filter-brightness-secondary: 80%;
 }
 
 html {
