--- a/src/styles/review.module.css
+++ b/src/styles/review.module.css
@@ -4,8 +4,8 @@
     justify-content: space-between;
     width: 30%;
     padding: 20px;
-    height: 175px;
 }
+
 
 @media(max-width: 767px) {
     .review {
@@ -17,6 +17,7 @@
 
 .review__text {
     line-height: 20px;
+    margin-bottom: 30px;
 }
 
 .review__company {
